# worldcup_score_predictor

./: .env.example  README.md  first_page.txt  pyproject.toml  requirements.txt  scratch_pdf.py
config/: model_config.yml  team_aliases.yml
data/audit/: audit_report.json  code_usage_report.json  team_feature_lineage.csv  team_feature_lineage.json
data/outputs/: backtest_report.csv  backtest_report.json  calibration_challenger_report.json  calibration_replay_audit.json  calibration_replay_audit.md  calibration_report.json  core_v2_comparison_report.json  core_v2_comparison_report.md  evaluation_report.json  live_predictions.csv  live_predictions.json  live_predictions_aggressive.json  live_predictions_core_v2.json  live_predictions_current.json  live_predictions_legacy_base.json  live_predictions_moderate.json  model_bakeoff_audit.json  model_bakeoff_audit.md  model_bakeoff_leaderboard.csv  model_bakeoff_model_cards.json  model_bakeoff_predictions.json  (+4 more)
src/: app_streamlit.py  audit_data.py  build_features.py  calibrate.py  calibration_replay.py  cli.py  config.py  download_github_data.py  download_kaggle_data.py  evaluate_predictions.py  model_bakeoff.py  model_poisson.py  normalize_teams.py  outcomes.py  parse_squads_pdf.py  predict_scorelines.py  simulate_tournament.py
tests/: test_audit_data.py  test_cli.py  test_didactic_helpers.py  test_evaluation_logic.py  test_normalize_predictions.py  test_normalize_teams.py  test_pdf_parser_smoke.py  test_scoreline_probabilities.py  test_streamlit_actuals.py  test_streamlit_schema.py
tmp/: generate_performance_audit.py
(+16 files in other folders)
